--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.25.0",
-    "@babel/parser": "^7.25.0",
-    "@babel/traverse": "^7.25.0",
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
     "@babel/types": "^7.25.0",
-    "@modelcontextprotocol/sdk": "^1.0.1",
-    "postcss": "^8.4.41",
+    "@modelcontextprotocol/sdk": "^1.21.0",
+    "@octokit/rest": "^22.0.1",
+    "babel": "^5.8.38",
+    "postcss": "^8.5.6",
     "postcss-scss": "^4.0.9",
     "stylelint": "^16.2.0",
     "stylelint-order": "^6.0.4",
